--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,9 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go 1.x
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v4
         with:
-          check-latest: true
+          go-version-file: 'go.mod'
+          cache: true
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
         with:
